force-app/main/default/objects/Essential_Living_Issue__c/Essential_Living_Issue__c.object-meta.xml
<CustomObject>
    <description>This object is a child of the Fulfillment object. It represents a single issue of Essential Living magazine for a client and is used as the primary object to capture content and track production.</description>
    <label>Essential Living Issue</label>
    <nameField>
        <label>Essential Living Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Essential Living Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>