force-app/main/default/objects/Essential_Living_Issue__c/fields/Back_cover_ad__c.field-meta.xml
<CustomField>
    <fullName>Back_cover_ad__c</fullName>
    <description>This field captures the Back Cover ad template to be produced for this issue</description>
    <inlineHelpText>This field captures the Back Cover ad template to be produced for this issue</inlineHelpText>
    <label>Back cover ad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>