force-app/main/default/objects/Essential_Living_Issue__c/fields/Back_Cover_Inside_Ad_Form__c.field-meta.xml
<CustomField>
    <fullName>Back_Cover_Inside_Ad_Form__c</fullName>
    <formula>Essential_Living_Publication__r.Back_Cover_Inside_Ad_Form__c &amp; &quot;?id=&quot; &amp; SF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back Cover (Inside) Ad Form</label>
    <type>Text</type>
</CustomField>