force-app/main/default/objects/Essential_Living_Issue__c/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Email</label>
    <type>Text</type>
</CustomField>