force-app/main/default/objects/Essential_Living_Issue__c/fields/Client_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_First_Name__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client First Name</label>
    <type>Text</type>
</CustomField>