force-app/main/default/objects/Essential_Living_Issue__c/fields/Client_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Last_Name__c</fullName>
    <description>Last Name from Contact Object</description>
    <formula>Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Name from Contact Object</inlineHelpText>
    <label>Client Last Name</label>
    <type>Text</type>
</CustomField>