force-app/main/default/objects/Essential_Living_Issue__c/fields/Client_Web_Login_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Web_Login_Code__c</fullName>
    <formula>Contact__r.Login_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Web Login Code</label>
    <type>Text</type>
</CustomField>