force-app/main/default/objects/Essential_Living_Issue__c/fields/Client_Web_Username__c.field-meta.xml
<CustomField>
    <fullName>Client_Web_Username__c</fullName>
    <formula>Contact__r.Web_Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Web Username</label>
    <type>Text</type>
</CustomField>