force-app/main/default/objects/Essential_Living_Issue__c/fields/Contact_Block_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_Disclosure__c</fullName>
    <label>Contact Block Disclosure</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>