force-app/main/default/objects/Essential_Living_Issue__c/fields/Contact_Block_Logo__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_Logo__c</fullName>
    <label>Contact Block Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>