force-app/main/default/objects/Essential_Living_Issue__c/fields/Contact_Block_Phone_Label__c.field-meta.xml
<CustomField>
    <fullName>Contact_Block_Phone_Label__c</fullName>
    <label>Contact Block Phone Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>