force-app/main/default/objects/Essential_Living_Issue__c/fields/Contact_List_Form__c.field-meta.xml
<CustomField>
    <fullName>Contact_List_Form__c</fullName>
    <formula>Essential_Living_Publication__r.Contact_List_Form__c &amp; &quot;?id=&quot; &amp; SF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact List Form</label>
    <type>Text</type>
</CustomField>