force-app/main/default/objects/Essential_Living_Issue__c/fields/Content_Block_License__c.field-meta.xml
<CustomField>
    <fullName>Content_Block_License__c</fullName>
    <label>Content Block License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>