force-app/main/default/objects/Essential_Living_Issue__c/fields/Cover_1_Block__c.field-meta.xml
<CustomField>
    <fullName>Cover_1_Block__c</fullName>
    <label>Cover 1 Block</label>
    <length>255</length>
    <type>Text</type>
</CustomField>