force-app/main/default/objects/Essential_Living_Issue__c/fields/Cover_1_Block_Updated__c.field-meta.xml
<CustomField>
    <fullName>Cover_1_Block_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover 1 Block Updated</label>
    <type>Checkbox</type>
</CustomField>