force-app/main/default/objects/Essential_Living_Issue__c/fields/Cover_1_choice__c.field-meta.xml
<CustomField>
    <fullName>Cover_1_choice__c</fullName>
    <description>The cover 1 selection in the webapp. Changing this field in Salesforce will not update the webapp&apos;s cover 1 choice.</description>
    <inlineHelpText>The cover 1 selection in the webapp. Changing this field in Salesforce will not update the webapp&apos;s cover 1 choice.</inlineHelpText>
    <label>Cover 1 choice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>