force-app/main/default/objects/Essential_Living_Issue__c/fields/Custom_Back_Cover_Ad__c.field-meta.xml
<CustomField>
    <fullName>Custom_Back_Cover_Ad__c</fullName>
    <description>Custom back cover design submitted by client</description>
    <inlineHelpText>Custom back cover design submitted by client</inlineHelpText>
    <label>Custom Back Cover Ad</label>
    <type>Url</type>
</CustomField>