force-app/main/default/objects/Essential_Living_Issue__c/fields/Custom_Back_Cover_Inside_Ad__c.field-meta.xml
<CustomField>
    <fullName>Custom_Back_Cover_Inside_Ad__c</fullName>
    <description>Custom Ad Supplied by Client for Inside Back Cover</description>
    <inlineHelpText>Custom Ad Supplied by Client for Inside Back Cover</inlineHelpText>
    <label>Custom Back Cover (Inside) Ad</label>
    <type>Url</type>
</CustomField>