force-app/main/default/objects/Essential_Living_Issue__c/fields/Custom_Back_Cover_Inside_Updated__c.field-meta.xml
<CustomField>
    <fullName>Custom_Back_Cover_Inside_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Back Cover Inside Updated</label>
    <type>Checkbox</type>
</CustomField>