force-app/main/default/objects/Essential_Living_Issue__c/fields/Custom_Front_Cover_Ad__c.field-meta.xml
<CustomField>
    <fullName>Custom_Front_Cover_Ad__c</fullName>
    <description>Custom Front Cover Artwork Link</description>
    <inlineHelpText>Custom Front Cover Artwork Link</inlineHelpText>
    <label>Custom Front Cover Ad</label>
    <type>Url</type>
</CustomField>