force-app/main/default/objects/Essential_Living_Issue__c/fields/Custom_Front_Cover_Inside_Ad_Updated__c.field-meta.xml
<CustomField>
    <fullName>Custom_Front_Cover_Inside_Ad_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Front Cover (Inside) Ad Updated</label>
    <type>Checkbox</type>
</CustomField>