force-app/main/default/objects/Essential_Living_Issue__c/fields/Delivery_End__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End__c</fullName>
    <formula>Essential_Living_Publication__r.Delivery_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery End</label>
    <type>Date</type>
</CustomField>