force-app/main/default/objects/Essential_Living_Issue__c/fields/Delivery_Start__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Start__c</fullName>
    <formula>Essential_Living_Publication__r.Delivery_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Start</label>
    <type>Date</type>
</CustomField>