force-app/main/default/objects/Essential_Living_Issue__c/fields/E_Magazine_URL__c.field-meta.xml
<CustomField>
    <fullName>E_Magazine_URL__c</fullName>
    <description>URL to this issue&apos;s e-magazine</description>
    <inlineHelpText>URL to this issue&apos;s e-magazine</inlineHelpText>
    <label>E-Magazine URL</label>
    <type>Url</type>
</CustomField>