force-app/main/default/objects/Essential_Living_Issue__c/fields/Editor_s_Letter_Form__c.field-meta.xml
<CustomField>
    <fullName>Editor_s_Letter_Form__c</fullName>
    <formula>Essential_Living_Publication__r.Editor_s_Letter_Form__c &amp; &quot;?id=&quot; &amp;  SF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Editor&apos;s Letter Form</label>
    <type>Text</type>
</CustomField>