force-app/main/default/objects/Essential_Living_Issue__c/fields/Editor_s_Letter_Personalized__c.field-meta.xml
<CustomField>
    <fullName>Editor_s_Letter_Personalized__c</fullName>
    <description>This field houses the personalized editor&apos;s letter submitted by the client</description>
    <inlineHelpText>This field houses the personalized editor&apos;s letter submitted by the client</inlineHelpText>
    <label>Editor&apos;s Letter (Personalized</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>