force-app/main/default/objects/Essential_Living_Issue__c/fields/EL_Boxed_Copies__c.field-meta.xml
<CustomField>
    <fullName>EL_Boxed_Copies__c</fullName>
    <description>Fulfillment EL Quantity minus EL Direct Mail Copies</description>
    <formula>Fulfillment_EL_Quantity__c - EL_Direct_Mail_Copies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EL Boxed Copies for THIS issue</inlineHelpText>
    <label>EL Boxed Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>