force-app/main/default/objects/Essential_Living_Issue__c/fields/EL_Direct_Mail_Copies__c.field-meta.xml
<CustomField>
    <fullName>EL_Direct_Mail_Copies__c</fullName>
    <description># of addresses on mailing list for direct mail copies</description>
    <inlineHelpText># of addresses on mailing list for direct mail copies</inlineHelpText>
    <label>EL Direct Mail Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>