force-app/main/default/objects/Essential_Living_Issue__c/fields/EL_E_Magazine_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>EL_E_Magazine_Purchaser__c</fullName>
    <description>References EL E-Magazine Purchaser from the Fulfillment</description>
    <formula>Fulfillment__r.EL_E_Magazine_Purchaser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>References EL E-Magazine Purchaser from the Fulfillment</inlineHelpText>
    <label>EL E-Magazine Purchaser</label>
    <type>Checkbox</type>
</CustomField>