force-app/main/default/objects/Essential_Living_Issue__c/fields/EL_Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>EL_Issue_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EL Issue ID</label>
    <type>Text</type>
</CustomField>