force-app/main/default/objects/Essential_Living_Issue__c/fields/EL_Pub_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>EL_Pub_SF_ID__c</fullName>
    <formula>casesafeid(Essential_Living_Publication__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EL Pub SF ID</label>
    <type>Text</type>
</CustomField>