force-app/main/default/objects/Essential_Living_Issue__c/fields/Essential_Living_Publication__c.field-meta.xml
<CustomField>
    <fullName>Essential_Living_Publication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Essential Living Publication</label>
    <referenceTo>Essential_Living_Publication__c</referenceTo>
    <relationshipLabel>Essential Living Issues</relationshipLabel>
    <relationshipName>Essential_Living_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>