force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <description>Related fulfillment record</description>
    <inlineHelpText>Related fulfillment record</inlineHelpText>
    <label>Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Essential Living Issues</relationshipLabel>
    <relationshipName>Essential_Living_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>