force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Back_Cover_Inside_Ad_Templ__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Back_Cover_Inside_Ad_Templ__c</fullName>
    <description>as seen on the Fulfillment</description>
    <formula>Fulfillment__r.Back_Cover_Inside_Ad_Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>as seen on the Fulfillment</inlineHelpText>
    <label>Fulfillment Back Cover (Inside) Ad Templ</label>
    <type>Text</type>
</CustomField>