force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Client_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Client_Contact_List__c</fullName>
    <description>Contact List from Fulfillment</description>
    <formula>Fulfillment__r.Client_Contact_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact List from Fulfillment</inlineHelpText>
    <label>Fulfillment Client Contact List</label>
    <type>Text</type>
</CustomField>