force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Contact_Block_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Contact_Block_Disclosure__c</fullName>
    <description>No longer works - Had to switch formula to reference name instead - go to issue field to see disclosure</description>
    <formula>Fulfillment__r.Contact_Block_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Contact Block Disclosure</label>
    <type>Text</type>
</CustomField>