force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Contact_Block_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Contact_Block_Phone_2__c</fullName>
    <formula>Fulfillment__r.Contact_Block_Phone_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>as seen on the Fulfillment</inlineHelpText>
    <label>Fulfillment Contact Block Phone 2</label>
    <type>Text</type>
</CustomField>