force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Custom_Back_Cover_Inside__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Custom_Back_Cover_Inside__c</fullName>
    <description>As seen on fulfillment</description>
    <formula>Fulfillment__r.Custom_Back_Cover_Inside_Ad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>As seen on fulfillment</inlineHelpText>
    <label>Fulfillment Custom Back Cover (Inside)</label>
    <type>Text</type>
</CustomField>