force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_EL_Boxed_Copies__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_EL_Boxed_Copies__c</fullName>
    <description># of boxed copies to ship directly to the client, workaround so we don&apos;t have to manage multiple subscriptions</description>
    <formula>Fulfillment__r.EL_Boxed_Copies__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># of boxed copies to ship directly to the client</inlineHelpText>
    <label>Fulfillment EL Boxed Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>