force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_EL_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_EL_Quantity__c</fullName>
    <description>Quantity of Essential Living Personal Magazine Subscription Copies as seen on fulfillment. (can update over time, this field will ALWAYS reflect what is on the fulfillment)</description>
    <formula>Fulfillment__r.EL_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity of Essential Living Personal Magazine Subscription Copies as seen on fulfillment. (can update over time, this field will ALWAYS reflect what is on the fulfillment)</inlineHelpText>
    <label>Fulfillment EL Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>