force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Mailing_Style__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Mailing_Style__c</fullName>
    <description>Mailing style from fulfillment</description>
    <formula>TEXT(Fulfillment__r.Mailing_Style__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mailing style as seen on fulfillment</inlineHelpText>
    <label>Fulfillment Mailing Style</label>
    <type>Text</type>
</CustomField>