force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Market_Project__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Market_Project__c</fullName>
    <description>Fulfillment Market Project</description>
    <formula>Fulfillment__r.Market_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fulfillment Market Project</inlineHelpText>
    <label>Fulfillment Market Project</label>
    <type>Text</type>
</CustomField>