force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Profession__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Profession__c</fullName>
    <description>Profession from fulfillment</description>
    <formula>Fulfillment__r.Profession__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profession from fulfillment</inlineHelpText>
    <label>Fulfillment Profession</label>
    <type>Text</type>
</CustomField>