force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Related_Core_Market__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Related_Core_Market__c</fullName>
    <description>Related core market as seen on fulfillment</description>
    <formula>Fulfillment__r.Related_Core_Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related core market as seen on fulfillment</inlineHelpText>
    <label>Fulfillment Related Core Market</label>
    <type>Text</type>
</CustomField>