force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_SF_ID__c</fullName>
    <formula>casesafeid(Fulfillment__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment SF ID</label>
    <type>Text</type>
</CustomField>