force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Shipping_Address__c</fullName>
    <description>Shipping Address from Fulfillment (From order)</description>
    <formula>Fulfillment__r.Shipping_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Shipping Address</label>
    <type>Text</type>
</CustomField>