force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Shipping_City__c</fullName>
    <description>Shipping city from fulfillment (From order)</description>
    <formula>Fulfillment__r.Shipping_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Shipping City</label>
    <type>Text</type>
</CustomField>