force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Shipping_State__c</fullName>
    <description>Shipping State from Fulfillment (From order)</description>
    <formula>Fulfillment__r.Shipping_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Shipping State</label>
    <type>Text</type>
</CustomField>