force-app/main/default/objects/Essential_Living_Issue__c/fields/Fulfillment_Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Shipping_Zip__c</fullName>
    <description>Shipping Zip from Fulfillment (From Order)</description>
    <formula>Fulfillment__r.Shipping_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Shipping Zip</label>
    <type>Text</type>
</CustomField>